# aihub

./: .gitignore  AGENTS.md  LICENSE  README.md  README.md.bak  README.zh-CN.md  console.txt  startup.sh
.cursor/rules/: documentation.mdc  feature-development.mdc  frontend-ui-design.mdc  java-code-style.mdc  logging.mdc  (+2 more)
aihub-java/: .gitignore
aihub-python/: Dockerfile  pyproject.toml
aihub-python/src/aihub/: auth.py  config.py  database.py  main.py  redis_client.py
aihub-python/src/aihub/agents/: agent.py  session.py
aihub-python/src/aihub/api/: routes.py
aihub-python/src/aihub/mcp/: server.py
aihub-python/src/aihub/models/: __init__.py  mcp_tool.py  model_config.py
aihub-python/src/aihub/services/: agent_template.py  model_config_service.py  model_gateway.py  rag_service.py  skill_service.py
aihub-python/src/aihub/skills/: registry.py
aihub-python/src/aihub/tools/: builtin.py  registry.py
aihub-python/src/aihub_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
aihub-python/tests/unit/: test_auth.py  test_config.py  test_mcp.py  test_model_gateway.py  test_session.py  test_skills.py  test_tools.py
backend/: .gitignore  README.md  pom.xml
docker/: docker-compose.dev.yml  docker-compose.yml  env.example
docs/: agent-template-solution.md  api-reference.md  competitive-analysis.md  configuration-management-best-practices.md  documentation-refactoring-plan.md  features.md  quickstart.md  refactoring-proposal.md  tutorial.md
frontend/: .eslintcache  index.html  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: git-commit.sh
(+855 files in other folders)
